# flatspark

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pytest-on-pr-main.yml  release.yml
examples/: advanced.py  simple.py
src/flatspark/: functions.py
tests/: test_functions.py
