[project]
name = "flatspark"
version = "0.1.0rc0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bombercorny" }
]
requires-python = ">=3.13"
dependencies = [
    "chispa>=0.11.1",
    "pyspark>=4.1.0",
]


[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
